--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,23 @@
 /.vs/bee_data_site/FileContentIndex
 /.vs/slnx.sqlite
 /.vs/VSWorkspaceState.json
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+.venv
+
+# Data Pipeline
+data/raw/*.csv
+data/raw/*.json
+!data/raw/.gitkeep
+# Keep processed data in git for website deployment
+# If files get too large, uncomment below:
+# data/processed/*.csv
+# data/processed/*.json
